rust/oxide_generator_rs/tests/ui/fail_actions_wrong_target.stderr
error: #[actions] can only be applied to an enum
 --> tests/ui/fail_actions_wrong_target.rs:4:1
  |
4 | pub struct NotActions;
  | ^^^^^^^^^^^^^^^^^^^^^^
