rust/oxide_generator_rs/tests/ui/fail_actions_wrong_target.rs
use oxide_generator_rs::actions;

#[actions]
pub struct NotActions;

fn main() {}
